# bip39-solver-gpu

./: .gitignore  Cargo.toml  DEVELOPER_DOCS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_IMPLEMENTATION.md  build.rs  debug_address.rs  debug_test.rs  example_config.json  example_cuda_config.json  example_gpu_config.json  example_test_config.json  find_words.rs  install.sh  package_for_gpu_test.sh  performance_test_config.json  prd_example_config.json  stress_test_config.json  test_19m.json  test_config.json  test_distributed_config.json  test_gpu_config.json  test_large_config.json
bip39-gpu-test-package/: Cargo.toml  GPU_TEST_README.md  README.md  distributed_config.json  example_config.json  install.sh  setup_gpu_test.sh  test_gpu_functionality.sh
bip39-gpu-test-package/src/: gpu.rs  lib.rs  main.rs  tests.rs
cl/: eth_address.cl  keccak.cl
cuda/: README.md  bip32.cu  gpu_pipeline.cu  hmac_sha512.cuh  keccak256.cu  pbkdf2.cu  secp256k1.cu  sha512.cuh
src/: bip39.rs  bip44.rs  candidate_gen.rs  config.rs  cpu_worker.rs  cuda_backend.rs  cuda_ffi.rs  error_handling.rs  eth.rs  eth_addr.rs  gpu.rs  gpu_backend.rs  gpu_manager.rs  gpu_memory.rs  gpu_models.rs  gpu_worker.rs  job_server.rs  job_types.rs  lib.rs  main.rs  opencl_backend.rs  slack.rs  stress_testing.rs  tests.rs  utils.rs  word_lut.rs  word_space.rs  worker_client.rs
