[package]
name = "bip39-solver-gpu"
version = "0.1.0"
authors = ["johncantrell97"]
edition = "2018"

[dependencies]
# ocl = "0.19"  # Has build issues with old rustc-serialize
opencl3 = "0.9"  # Use newer OpenCL bindings
hex = "0.4"
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers-core = "2.0"
k256 = "0.13"
tiny-keccak = { version = "2.0", features = ["keccak"] }
