[package]
name = "bip39-solver-gpu"
version = "0.1.0"
authors = ["johncantrell97"]
edition = "2018"
build = "build.rs"

[features]
default = []
cuda = []
opencl = ["dep:opencl3"]  # Use dep: syntax for cleaner conditional dependencies

[[bin]]
name = "bip39-solver-gpu"
path = "src/main.rs"

[[bin]]
name = "bip39-server"
path = "src/bin/server.rs"

[[bin]]
name = "bip39-worker"
path = "src/bin/worker.rs"

[dependencies]
# ocl = "0.19"  # Has build issues with old rustc-serialize
opencl3 = { version = "0.9", optional = true }  # Use newer OpenCL bindings, make optional
hex = "0.4"
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers-core = "2.0"
k256 = "0.13"
tiny-keccak = { version = "2.0", features = ["keccak"] }
# BIP39/BIP32/BIP44 support
bip39 = "2.0"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
num-bigint = "0.4"

[build-dependencies]
cc = "1.0"
